# tmux-deck

./: .gitignore  Cargo.toml  PLAN.md  README.md  flake.nix  tmux-deck.nix
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: claude-hook-treeview-plan.md  config.example.toml
src/: agents.rs  app.rs  cli.rs  config.rs  group.rs  hook.rs  main.rs  termscreen.rs  ui.rs
src/actor/: messages.rs  mod.rs  refresh_actor.rs  tmux_actor.rs  ui_actor.rs
