[package]
name = "tmux-deck"
version = "0.2.0"
edition = "2024"
authors = ["tkcd <goriponikeike55@gmail.com>"]
repository = "https://github.com/takeshid/tmux-deck"
keywords = ["tmux", "cli"]
license-file = "LICENSE"
readme = "README.md"
description = "A Tmux session manager. Monitoring multi session Realtime preview."

[dependencies]
ratatui = "0.29"
ansi-to-tui = "7"
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap-cargo = "0.18.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time"] }
directories = "6.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
unicode-width = "0.2"

[[bin]]
name = "tmux-deck"
path = "src/main.rs"
